--- a/index.html
+++ b/index.html
@@ -9,34 +9,89 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     </head>
     <body>
-        <div class="vh-100 d-flex justify-content-center align-items-center">
+        <div class="vh-100 d-flex flex-column justify-content-center align-items-center">
+            <h1 class="text-capitalize mb-5">tabella auto</h1>
             <div class="container">
-                <table class="table">
+                <table class="table table-striped">
                     <thead>
                       <tr>
-                        <th scope="col">#</th>
-                        <th scope="col">First</th>
-                        <th scope="col">Last</th>
-                        <th scope="col">Handle</th>
+                        <th scope="col">Colonna</th>
+                        <th scope="col">Tipologia</th>
+                        <th scope="col">Attributo</th>
+                        <th scope="col">Primary</th>
                       </tr>
                     </thead>
                     <tbody class="table-group-divider">
                       <tr>
-                        <th scope="row">1</th>
-                        <td>...</td>
-                        <td>...</td>
+                        <th scope="row">ID</th>
+                        <td>INT</td>
+                        <td>AUTO_INCREMENT - NOTNULL - UNIQUE</td>
+                        <td class="text-success">PRIMARY KEY</td>
+                      </tr>
+                      <tr>
+                        <th scope="row">MARCA</th>
+                        <td>VARCHAR(15)</td>
+                        <td>NOTNULL</td>
                         <td>...</td>
                       </tr>
                       <tr>
-                        <th scope="row">2</th>
-                        <td>...</td>
-                        <td>...</td>
+                        <th scope="row">MODELLO</th>
+                        <td>VARCHAR(25)</td>
+                        <td>NOTNULL</td>
                         <td>...</td>
                       </tr>
                       <tr>
-                        <th scope="row">3</th>
+                        <th scope="row">VERSIONE</th>
+                        <td>VARCHAR(25)</td>
+                        <td>NULL</td>
                         <td>...</td>
+                      </tr>
+                      <tr>
+                        <th scope="row">ANNO</th>
+                        <td>YEAR</td>
+                        <td>NOTNULL</td>
                         <td>...</td>
+                      </tr>
+                      <tr>
+                        <th scope="row">CARBURANTE</th>
+                        <td>VARCHAR(30)</td>
+                        <td>NOTNULL</td>
+                        <td>...</td>
+                      </tr>
+                      <tr>
+                        <th scope="row">CHILOMETRAGGIO</th>
+                        <td>FLOAT(7,1)</td>
+                        <td>NOTNULL</td>
+                        <td>...</td>
+                      </tr>
+                      <tr>
+                        <th scope="row">CAMBIO</th>
+                        <td>VARCHAR(15)</td>
+                        <td>NOTNULL</td>
+                        <td>...</td>
+                      </tr>
+                      <tr>
+                        <th scope="row">NUMERO PORTE</th>
+                        <td>TINYINT</td>
+                        <td>NOTNULL</td>
+                        <td>...</td>
+                      </tr>
+                      <tr>
+                        <th scope="row">NUMERO POSTI</th>
+                        <td>TINYINT</td>
+                        <td>NOTNULL</td>
+                        <td>...</td>
+                      </tr>
+                      <tr>
+                        <th scope="row">NUMERO PRECEDENTI PROPRIETARI</th>
+                        <td>TINYINT</td>
+                        <td>NULL</td>
+                        <td>...</td>
+                      </tr>
+                      <tr>
+                        <th scope="row">CLASSE EMISSIONI</th>
+                        <td>VARCHAR(12)</td>
+                        <td>NOTNULL</td>
                         <td>...</td>
                       </tr>
                     </tbody>
